Fixed Responsive Image Bug that displays incorrectly on mobile/small screens

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -281,7 +281,7 @@
 
 		img {
 			display: block;
-			width: auto;
+			width: 100%;
 		}
 
 		&.fit {
